<?xml version="1.0"?>
<package format="2">
  <name>controls_final</name>
  <version>0.0.1</version>
  <description>WPI's RBE 502 Final Project</description>
  <maintainer email="gunnarhorve@gmail.com">Gunnar Horve</maintainer>


  <license>MIT</license>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>xacro</build_depend>

  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>baxter_core_msgs</build_export_depend>
  <build_export_depend>baxter_interface</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>actionlib</exec_depend>

  <exec_depend>baxter_core_msgs</exec_depend>
  <exec_depend>baxter_interface</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export></export>
</package>
